--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/n/ncbi-tools6/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/n/ncbi-tools6/stable_copyright-detailed.expected.yml
@@ -1,4 +1,4 @@
-- public-domain AND us-govt-public-domain AND public-domain-disclaimer
+- public-domain AND us-govt-public-domain
 - - public_domain
   - BSL-1.0
   - MIT
@@ -21,13 +21,11 @@
   - NCSA
   - BSD-3-Clause
   - GPL-2+
-- (public-domain AND public-domain AND us-govt-public-domain AND public-domain-disclaimer) AND
-  boost-1.0 AND (mit-old-style-no-advert AND mit-veillard-variant AND proprietary-license) AND
-  public-domain AND flex-2.5 AND flex-2.5 AND flex-2.5 AND flex-2.5 AND flex-2.5 AND mit AND
-  (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus AND gpl-2.0-plus) AND (public-domain AND
-  public-domain AND us-govt-public-domain AND public-domain-disclaimer) AND (public-domain AND
-  public-domain AND us-govt-public-domain AND public-domain-disclaimer) AND (public-domain AND
-  public-domain AND us-govt-public-domain AND public-domain-disclaimer)
+- (public-domain AND us-govt-public-domain) AND boost-1.0 AND (mit-old-style-no-advert AND mit-veillard-variant
+  AND proprietary-license) AND public-domain AND flex-2.5 AND flex-2.5 AND flex-2.5 AND flex-2.5
+  AND flex-2.5 AND mit AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-2.0-plus AND gpl-2.0-plus)
+  AND (public-domain AND us-govt-public-domain) AND (public-domain AND us-govt-public-domain)
+  AND (public-domain AND us-govt-public-domain)
 - |
   1996-2017 NCBI
   2006 John Maddock
